# home_work_29

./: docker-compose.yaml  pyproject.toml
ads/: views.py
ads/permissions/: ad.py  selection.py
data/: ads.json  category.json  location.json
