[tool.poetry]
name = "home-work-29"
version = "0.1.0"
description = ""
authors = ["Professional_test <888lin888@gmail.com>"]
readme = "README.md"
packages = [{include = "home_work_29"}]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework-simplejwt = "^5.2.2"
python-dateutil = "^2.8.2"
pytest = "^7.2.2"
pytest-django = "^4.2.1"
pytest-factoryboy = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
